--- a/Pages/product_categories.html
+++ b/Pages/product_categories.html
@@ -422,7 +422,7 @@
                         <li><a href="product_categories.html" class="text-text-secondary hover:text-primary transition-colors duration-250">Categories</a></li>
                         <li><a href="brand_showcase.html" class="text-text-secondary hover:text-primary transition-colors duration-250">Brands</a></li>
                         <li><a href="search_results.html" class="text-text-secondary hover:text-primary transition-colors duration-250">Search</a></li>
-                        <li><a href="javascript:void(0)" class="text-text-secondary hover:text-primary transition-colors duration-250">About Us</a></li>
+                        <li><a href="About.html" class="text-text-secondary hover:text-primary transition-colors duration-250">About Us</a></li>
                     </ul>
                 </div>
                 
@@ -430,23 +430,43 @@
                     <h3 class="text-lg font-heading font-semibold text-text-primary mb-4">Contact Info</h3>
                     <ul class="space-y-2 text-text-secondary">
                         <li class="flex items-center">
-                            <svg class="h-4 w-4 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"/>
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"/>
-                            </svg>
-                            123 Main Street, City
+                            <a href="https://maps.app.goo.gl/Rp8DduGBc9Su7sNK6?g_st=aw" target="_blank" rel="noopener noreferrer" class="flex items-center">
+                                <svg class="h-4 w-4 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"/>
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"/>
+                                </svg>
+                                <span>
+                                    Shop no.2 Gangeshwar Compound,<br>
+                                    Vasta Devdi Rd, Gotalawadi, Tunki, Katargam,<br>
+                                    Surat, Gujarat 395004
+                                </span>
+                            </a>
                         </li>
                         <li class="flex items-center">
                             <svg class="h-4 w-4 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/>
                             </svg>
-                            +91 98765 43210
+                            <b>Rakesh Tamakuwala</b>
+                            <a href="tel:+919825113432" class="ml-1 hover:underline"> +91 98251 13432</a>
+                        </li>
+                        <li class="flex items-center">
+                            <svg class="h-4 w-4 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/>
+                            </svg>
+                            <b>Manish Tamakuwala</b>
+                            <a href="tel:+919825113432" class="ml-1 hover:underline"> +91 98251 30201</a>
                         </li>
                         <li class="flex items-center">
                             <svg class="h-4 w-4 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
                             </svg>
-                            info@princechemist.com
+                            <a href="mailto:rakesh_tamakuwala@yahoo.com" class="hover:underline"> rakesh_tamakuwala@yahoo.com</a>
+                        </li>
+                        <li class="flex items-center">
+                            <svg class="h-4 w-4 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
+                            </svg>
+                            <a href="mailto:manish.p.tamakuwala@gmail.com" class="hover:underline"> manish.p.tamakuwala@gmail.com</a>
                         </li>
                     </ul>
                 </div>
@@ -454,7 +474,7 @@
             
             <div class="border-t border-border-light mt-8 pt-8 text-center">
                 <p class="text-text-secondary">
-                    © 2025 Prince Chemist. All Rights Reserved.
+                    ©Prince Chemist. All Rights Reserved.
                 </p>
             </div>
         </div>
