--- a/Pages/About.html
+++ b/Pages/About.html
@@ -144,7 +144,7 @@ footer {
             <p>We believe in quality, affordability, and long-term customer trust.</p>
         </div>
         <div class="image-box">
-            <img src="images/about-store-front.jpg" alt="Prince Chemist Store">
+            <img src="../images/about-store-front.jpg" alt="Prince Chemist Store">
         </div>
     </div>
 </section>
@@ -153,7 +153,7 @@ footer {
 <section>
     <div class="grid">
         <div class="image-box">
-            <img src="images/about-inside-store.jpg" alt="Inside Store">
+            <img src="../images/about-inside-store.jpg" alt="Inside Store">
         </div>
         <div>
             <h2>Our Mission</h2>
@@ -169,15 +169,16 @@ footer {
     <div class="owners">
 
         <div class="owner-card">
-            <img src="images/rakesh-tamakuwala.jpg" alt="Rakesh Tamakuwala">
+            <img src="../images/rakesh-tamakuwala.jpg" alt="Rakesh Tamakuwala">
             <div class="owner-name" tabindex="0">Rakesh Tamakuwala</div>
             <div class="owner-contact">
                 <a href="tel:+919825113432">📞 +91 98251 13432</a>
+                <a href="mailto:rakesh_tamakuwala@yahoo.com">✉️ rakesh_tamakuwala@yahoo.com</a>
             </div>
         </div>
 
         <div class="owner-card">
-            <img src="images/manish-tamakuwala.jpg" alt="Manish Tamakuwala">
+            <img src="../images/manish-tamakuwala.jpg" alt="Manish Tamakuwala">
             <div class="owner-name" tabindex="0">Manish Tamakuwala</div>
             <div class="owner-contact">
                 <a href="tel:+919825130201">📞 +91 98251 30201</a>
