--- a/Pages/product_categories.html
+++ b/Pages/product_categories.html
@@ -437,7 +437,7 @@
                                 </svg>
                                 <span>
                                     Shop no.2 Gangeshwar Compound,<br>
-                                    Vasta Devdi Rd, Gotalawadi, Tunki, Katargam,<br>
+                                    Vasta Devdi Rd,Tunki, Katargam,<br>
                                     Surat, Gujarat 395004
                                 </span>
                             </a>
@@ -446,27 +446,13 @@
                             <svg class="h-4 w-4 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/>
                             </svg>
-                            <b>Rakesh Tamakuwala</b>
                             <a href="tel:+919825113432" class="ml-1 hover:underline"> +91 98251 13432</a>
                         </li>
                         <li class="flex items-center">
                             <svg class="h-4 w-4 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/>
                             </svg>
-                            <b>Manish Tamakuwala</b>
-                            <a href="tel:+919825113432" class="ml-1 hover:underline"> +91 98251 30201</a>
-                        </li>
-                        <li class="flex items-center">
-                            <svg class="h-4 w-4 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
-                            </svg>
-                            <a href="mailto:rakesh_tamakuwala@yahoo.com" class="hover:underline"> rakesh_tamakuwala@yahoo.com</a>
-                        </li>
-                        <li class="flex items-center">
-                            <svg class="h-4 w-4 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
-                            </svg>
-                            <a href="mailto:manish.p.tamakuwala@gmail.com" class="hover:underline"> manish.p.tamakuwala@gmail.com</a>
+                            <a href="tel:+919825130201" class="ml-1 hover:underline"> +91 98251 30201</a>
                         </li>
                     </ul>
                 </div>
