--- a/About.html
+++ b/About.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>About Us | Prince Chemist – Surat</title>
-
 <meta name="description" content="Prince Chemist is a trusted FMCG and pharmacy store in Surat offering genuine medicines and daily essentials.">
 
 <style>
@@ -144,7 +143,7 @@ footer {
             <p>We believe in quality, affordability, and long-term customer trust.</p>
         </div>
         <div class="image-box">
-            <img src="../images/about-store-front.jpg" alt="Prince Chemist Store">
+            <img src="images/about-store-front.jpg" alt="Prince Chemist Store">
         </div>
     </div>
 </section>
@@ -153,7 +152,7 @@ footer {
 <section>
     <div class="grid">
         <div class="image-box">
-            <img src="../images/about-inside-store.jpg" alt="Inside Store">
+            <img src="images/about-inside-store.jpg" alt="Inside Store">
         </div>
         <div>
             <h2>Our Mission</h2>
@@ -169,7 +168,7 @@ footer {
     <div class="owners">
 
         <div class="owner-card">
-            <img src="../images/rakesh-tamakuwala.jpg" alt="Rakesh Tamakuwala">
+            <img src="images/rakesh-tamakuwala.jpg" alt="Rakesh Tamakuwala">
             <div class="owner-name" tabindex="0">Rakesh Tamakuwala</div>
             <div class="owner-contact">
                 <a href="tel:+919825113432">📞 +91 98251 13432</a>
@@ -178,7 +177,7 @@ footer {
         </div>
 
         <div class="owner-card">
-            <img src="../images/manish-tamakuwala.jpg" alt="Manish Tamakuwala">
+            <img src="images/manish-tamakuwala.jpg" alt="Manish Tamakuwala">
             <div class="owner-name" tabindex="0">Manish Tamakuwala</div>
             <div class="owner-contact">
                 <a href="tel:+919825130201">📞 +91 98251 30201</a>
@@ -199,7 +198,7 @@ footer {
     </p>
 
     <p>
-        <a href="https://maps.app.goo.gl/Rp8DduGBc9Su7sNK6?g_st=aw" target="_blank">
+        <a href="https://maps.app.goo.gl/Rp8DduGBc9Su7sNK6?g_st=aw" target="_blank" rel="noopener noreferrer">
             👉 Open in Google Maps
         </a>
     </p>
