--- a/Product_details.html
+++ b/Product_details.html
@@ -34,9 +34,9 @@
 
                 <!-- Navigation -->
                 <nav class="hidden md:flex space-x-8">
-                    <a href="Pages/product_categories.html" class="text-text-secondary hover:text-primary transition-colors duration-250">Categories</a>
-                    <a href="Pages/brand_showcase.html" class="text-text-secondary hover:text-primary transition-colors duration-250">Brands</a>
-                    <a href="Pages/search_results.html" class="text-text-secondary hover:text-primary transition-colors duration-250">Search</a>
+                    <a href="product_categories.html" class="text-text-secondary hover:text-primary transition-colors duration-250">Categories</a>
+                    <a href="brand_showcase.html" class="text-text-secondary hover:text-primary transition-colors duration-250">Brands</a>
+                    <a href="search_results.html" class="text-text-secondary hover:text-primary transition-colors duration-250">Search</a>
                 </nav>
 
                 <!-- Mobile menu button -->
@@ -50,9 +50,9 @@
             <!-- Mobile Navigation -->
             <div id="mobile-menu" class="md:hidden hidden border-t border-border-light pt-4 pb-3">
                 <div class="space-y-1">
-                    <a href="Pages/product_categories.html" class="block px-3 py-2 text-text-secondary hover:text-primary hover:bg-background rounded-lg transition-colors duration-250">Categories</a>
-                    <a href="Pages/brand_showcase.html" class="block px-3 py-2 text-text-secondary hover:text-primary hover:bg-background rounded-lg transition-colors duration-250">Brands</a>
-                    <a href="Pages/search_results.html" class="block px-3 py-2 text-text-secondary hover:text-primary hover:bg-background rounded-lg transition-colors duration-250">Search</a>
+                    <a href="product_categories.html" class="block px-3 py-2 text-text-secondary hover:text-primary hover:bg-background rounded-lg transition-colors duration-250">Categories</a>
+                    <a href="brand_showcase.html" class="block px-3 py-2 text-text-secondary hover:text-primary hover:bg-background rounded-lg transition-colors duration-250">Brands</a>
+                    <a href="search_results.html" class="block px-3 py-2 text-text-secondary hover:text-primary hover:bg-background rounded-lg transition-colors duration-250">Search</a>
                 </div>
             </div>
         </div>
@@ -245,7 +245,7 @@
                                 <p class="text-sm text-text-secondary">Trusted Oral Care Brand</p>
                             </div>
                         </div>
-                        <a href="Pages/brand_showcase.html" class="btn btn-outline text-sm h-10 px-4">
+                        <a href="brand_showcase.html" class="btn btn-outline text-sm h-10 px-4">
                             View Brand
                         </a>
                     </div>
@@ -501,7 +501,7 @@
                         <span class="ml-2 text-xl font-heading font-semibold text-text-primary">Prince Chemist</span>
                     </div>
                     <p class="text-text-secondary mb-4 max-w-md">
-                        Your trusted FMCG store offering quality products from leading brands. Serving the community with excellence since 1995.
+                        Your trusted FMCG store offering quality products from leading brands.Serving the community with excellence since 1995.
                     </p>
                     <div class="flex space-x-4">
                         <a href="javascript:void(0)" class="text-text-secondary hover:text-primary transition-colors duration-250">
@@ -525,10 +525,10 @@
                 <div>
                     <h3 class="text-lg font-heading font-semibold text-text-primary mb-4">Quick Links</h3>
                     <ul class="space-y-2">
-                        <li><a href="Pages/product_categories.html" class="text-text-secondary hover:text-primary transition-colors duration-250">Categories</a></li>
-                        <li><a href="Pages/brand_showcase.html" class="text-text-secondary hover:text-primary transition-colors duration-250">Brands</a></li>
-                        <li><a href="Pages/search_results.html" class="text-text-secondary hover:text-primary transition-colors duration-250">Search</a></li>
-                        <li><a href="javascript:void(0)" class="text-text-secondary hover:text-primary transition-colors duration-250">About Us</a></li>
+                        <li><a href="product_categories.html" class="text-text-secondary hover:text-primary transition-colors duration-250">Categories</a></li>
+                        <li><a href="brand_showcase.html" class="text-text-secondary hover:text-primary transition-colors duration-250">Brands</a></li>
+                        <li><a href="search_results.html" class="text-text-secondary hover:text-primary transition-colors duration-250">Search</a></li>
+                        <li><a href="About.html" class="text-text-secondary hover:text-primary transition-colors duration-250">About Us</a></li>
                     </ul>
                 </div>
                 
