--- a/category_product_listing.html
+++ b/category_product_listing.html
@@ -936,7 +936,7 @@
 
         // Product view
         function viewProduct(productCode) {
-            window.location.href = `product_details.html?code=${productCode}`;
+            window.location.href = `product_details.html?code=${productCode}` + code ;
         }
 
         // Quick view modal
