--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p class="loading-text">Loading your pharmacy experience...</p>
         <div class="redirect-info">
             <p>Redirecting to our product categories in a moment...</p>
-            <a href="pages/product_categories.html" class="skip-link">Skip to Categories</a>
+            <a href="product_categories.html" class="skip-link">Skip to Categories</a>
         </div>
     </div>
 
