--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script>
         // Redirect to product categories page after a brief delay
         setTimeout(function() {
-            window.location.href = product_details.html;
+            window.location.href ="product_details.html";
         }, 2000);
     </script>
   
