--- a/Product_details.html
+++ b/Product_details.html
@@ -392,7 +392,7 @@
 
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
                 <!-- Related Product 1 -->
-                <div class="card group cursor-pointer" onclick="window.location.href=product_details.html">
+                <div class="card group cursor-pointer" onclick="window.location.href='product_details.html'">
                     <div class="relative overflow-hidden rounded-lg mb-4">
                         <img 
                             src="https://img.rocket.new/generatedImages/rocket_gen_img_17168fe14-1766853855943.png" 
@@ -415,7 +415,7 @@
                 </div>
 
                 <!-- Related Product 2 -->
-                <div class="card group cursor-pointer" onclick="window.location.href=product_details.html">
+                <div class="card group cursor-pointer" onclick="window.location.href='product_details.html'">
                     <div class="relative overflow-hidden rounded-lg mb-4">
                         <img 
                             src="https://images.unsplash.com/photo-1612705166160-97d3b2e8e212" 
@@ -438,7 +438,7 @@
                 </div>
 
                 <!-- Related Product 3 -->
-                <div class="card group cursor-pointer" onclick="window.location.href=product_details.html">
+                <div class="card group cursor-pointer" onclick="window.location.href='product_details.html'">
                     <div class="relative overflow-hidden rounded-lg mb-4">
                         <img 
                             src="https://img.rocket.new/generatedImages/rocket_gen_img_1d4f38e96-1766853855419.png" 
@@ -461,7 +461,7 @@
                 </div>
 
                 <!-- Related Product 4 -->
-                <div class="card group cursor-pointer" onclick="window.location.href=product_details.html">
+                <div class="card group cursor-pointer" onclick="window.location.href=p'product_details.html'">
                     <div class="relative overflow-hidden rounded-lg mb-4">
                         <img 
                             src="https://img.rocket.new/generatedImages/rocket_gen_img_1d673a465-1766853857535.png" 
