--- a/search_results.html
+++ b/search_results.html
@@ -749,7 +749,7 @@
                         <li><a href="product_categories.html" class="text-text-secondary hover:text-primary transition-colors duration-250">Categories</a></li>
                         <li><a href="brand_showcase.html" class="text-text-secondary hover:text-primary transition-colors duration-250">Brands</a></li>
                         <li><a href="search_results.html" class="text-text-secondary hover:text-primary transition-colors duration-250">Search</a></li>
-                        <li><a href="javascript:void(0)" class="text-text-secondary hover:text-primary transition-colors duration-250">About Us</a></li>
+                        <li><a href="About.html" class="text-text-secondary hover:text-primary transition-colors duration-250">About Us</a></li>
                     </ul>
                 </div>
                 
