--- a/About.html
+++ b/About.html
@@ -7,52 +7,98 @@
 <meta name="description" content="Prince Chemist is a trusted FMCG and pharmacy store in Surat offering genuine medicines and daily essentials.">
 
 <style>
+/* Reset & Base */
 body {
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    background: #f9fafb;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: #f0f4f8;
     color: #333;
     line-height: 1.6;
+    scroll-behavior: smooth;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+/* Header */
 header {
-    background: #0f766e;
+    background: linear-gradient(135deg, #0f766e, #14b8a6);
     color: #fff;
-    padding: 20px;
+    padding: 50px 20px;
     text-align: center;
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
 }
 
+header h1 {
+    margin: 0;
+    font-size: 3rem;
+    letter-spacing: 1px;
+    text-shadow: 0 2px 5px rgba(0,0,0,0.2);
+}
+
+header p {
+    font-size: 1.2rem;
+    margin-top: 10px;
+}
+
+/* Main Content */
 main {
-    max-width: 1100px;
+    max-width: 1200px;
     margin: auto;
-    padding: 40px 20px;
+    padding: 60px 20px;
 }
 
 section {
-    margin-bottom: 60px;
+    margin-bottom: 80px;
+    animation: fadeIn 1s ease forwards;
 }
 
 h2 {
     color: #0f766e;
-    font-size: 28px;
-    margin-bottom: 15px;
+    font-size: 2.2rem;
+    margin-bottom: 20px;
+    position: relative;
 }
 
+h2::after {
+    content: '';
+    width: 60px;
+    height: 4px;
+    background: #14b8a6;
+    display: block;
+    margin-top: 8px;
+    border-radius: 2px;
+}
+
+/* Grid Layout */
 .grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    gap: 30px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 40px;
     align-items: center;
 }
 
+/* Image Box */
 .image-box img {
     width: 100%;
-    height: 300px;
-    object-fit: cover;
-    border-radius: 10px;
+    height: 320px;
+    object-fit: contain; /* full image visible, no cropping */
+    border-radius: 20px;
+    border: 5px solid #14b8a6; /* beautiful border */
+    padding: 5px;
+    background: #fff;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+    transition: transform 0.5s ease, box-shadow 0.5s ease;
 }
 
-/* Owners */
+.image-box img:hover {
+    transform: scale(1.05);
+    box-shadow: 0 12px 25px rgba(0,0,0,0.2);
+}
+
+/* Owners Section */
 .owners {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -61,24 +107,34 @@ h2 {
 
 .owner-card {
     background: #fff;
-    border-radius: 12px;
-    padding: 20px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+    border-radius: 20px;
+    padding: 25px 20px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.1);
     text-align: center;
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.owner-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 12px 25px rgba(0,0,0,0.15);
 }
 
 .owner-card img {
-    width: 140px;
-    height: 140px;
+    width: 150px;
+    height: 150px;
+    object-fit: contain; /* full image visible */
     border-radius: 50%;
-    object-fit: cover;
+    border: 4px solid #14b8a6;
+    padding: 4px;
+    background: #fff;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    margin-bottom: 15px;
 }
 
 .owner-name {
-    font-size: 18px;
+    font-size: 1.1rem;
     font-weight: bold;
     color: #0f766e;
-    margin-top: 10px;
     cursor: pointer;
     position: relative;
 }
@@ -87,16 +143,15 @@ h2 {
 .owner-contact {
     display: none;
     margin-top: 10px;
+    font-size: 0.95rem;
 }
 
 .owner-contact a {
     display: block;
-    text-decoration: none;
-    color: #333;
     margin: 5px 0;
+    color: #333;
 }
 
-/* Show on hover + mobile tap */
 .owner-name:hover + .owner-contact,
 .owner-name:focus + .owner-contact {
     display: block;
@@ -109,19 +164,30 @@ h2 {
     }
 }
 
+/* Map */
 .map-box iframe {
     width: 100%;
-    height: 350px;
-    border: 0;
-    border-radius: 12px;
+    height: 400px;
+    border: none;
+    border-radius: 20px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.1);
 }
 
+/* Footer */
 footer {
-    background: #0f766e;
+    background: linear-gradient(135deg, #0f766e, #14b8a6);
     color: #fff;
     text-align: center;
-    padding: 15px;
+    padding: 25px 15px;
+    font-size: 0.95rem;
 }
+
+/* Animations */
+@keyframes fadeIn {
+    0% {opacity: 0; transform: translateY(20px);}
+    100% {opacity: 1; transform: translateY(0);}
+}
+
 </style>
 </head>
 
@@ -156,7 +222,7 @@ footer {
         </div>
         <div>
             <h2>Our Mission</h2>
-            <p>To deliver reliable healthcare products with transparency, honesty, and personalized service.</p>
+            <p>Delivering reliable healthcare products with transparency, honesty, and personalized service to every customer.</p>
         </div>
     </div>
 </section>
